--- a/pom.xml
+++ b/pom.xml
@@ -403,6 +403,12 @@
                 <version>2.0.12</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.mockito</groupId>
+                <artifactId>mockito-core</artifactId>
+                <version>2.24.5</version>
+                <scope>test</scope>
+            </dependency>
 
         </dependencies>
     </dependencyManagement>
