--- a/reusable-code/pom.xml
+++ b/reusable-code/pom.xml
@@ -118,7 +118,10 @@
             <artifactId>jedis</artifactId>
         </dependency>
 
-
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+        </dependency>
 
 
 
