--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,13 @@
         <slf4j.version>1.7.25</slf4j.version>
         <rocketmq.version>4.3.0</rocketmq.version>
 
+        <zkclient.version>0.10</zkclient.version>
+        <dubbo.registry.nacos>0.0.2</dubbo.registry.nacos>
+        <spring-context-support.version>1.0.2</spring-context-support.version>
+        <fescar.version>0.1.3</fescar.version>
+        <mysql-connector.version>5.1.31</mysql-connector.version>
+        <curator.version>4.1.0</curator.version>
+
     </properties>
 
     <dependencyManagement>
@@ -272,13 +279,11 @@
                 <version>0.9.19</version>
             </dependency>
 
-            <!-- https://mvnrepository.com/artifact/com.dyuproject.protostuff/protostuff-json -->
             <dependency>
                 <groupId>com.dyuproject.protostuff</groupId>
                 <artifactId>protostuff-json</artifactId>
                 <version>1.1.3</version>
             </dependency>
-            <!-- https://mvnrepository.com/artifact/io.protostuff/protostuff-json -->
             <dependency>
                 <groupId>io.protostuff</groupId>
                 <artifactId>protostuff-json</artifactId>
@@ -328,11 +333,11 @@
                 <version>2.4.0.Final</version>
             </dependency>
 
-            <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
             <dependency>
                 <groupId>mysql</groupId>
                 <artifactId>mysql-connector-java</artifactId>
-                <version>5.1.46</version>
+                <!--<version>5.1.46</version>-->
+                <version>${mysql-connector.version}</version>
             </dependency>
 
             <dependency>
@@ -369,8 +374,14 @@
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>druid</artifactId>
-                <version>1.0.19</version>
+                <!--fescar官方引用版本-->
+                <!--<version>1.1.12</version>-->
+                <!--druid最高版本-->
+                <!--<version>1.1.14</version>-->
+                <!--fescar需要的最低版本-->
+                <version>1.1.3</version>
             </dependency>
+
 
             <!-- poi -->
             <dependency>
@@ -390,8 +401,6 @@
                 <version>4.0.56.Final</version>
             </dependency>
 
-
-
             <dependency>
                 <groupId>org.apache.pdfbox</groupId>
                 <artifactId>pdfbox</artifactId>
@@ -408,6 +417,53 @@
                 <artifactId>mockito-core</artifactId>
                 <version>2.24.5</version>
                 <scope>test</scope>
+            </dependency>
+
+            <!--fescar-->
+            <dependency>
+                <groupId>com.alibaba.fescar</groupId>
+                <artifactId>fescar-tm</artifactId>
+                <version>${fescar.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba.fescar</groupId>
+                <artifactId>fescar-spring</artifactId>
+                <version>${fescar.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba.fescar</groupId>
+                <artifactId>fescar-dubbo</artifactId>
+                <version>${fescar.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.101tec</groupId>
+                <artifactId>zkclient</artifactId>
+                <version>${zkclient.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>dubbo-registry-nacos</artifactId>
+                <version>${dubbo.registry.nacos}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba.spring</groupId>
+                <artifactId>spring-context-support</artifactId>
+                <version>${spring-context-support.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework</groupId>
+                <artifactId>spring-jdbc</artifactId>
+                <version>${spring.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>${mysql-connector.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.curator</groupId>
+                <artifactId>curator-recipes</artifactId>
+                <version>${curator.version}</version>
             </dependency>
 
         </dependencies>
