--- a/pom.xml
+++ b/pom.xml
@@ -374,12 +374,15 @@
             <dependency>
                 <groupId>com.alibaba</groupId>
                 <artifactId>druid</artifactId>
+                <!--DruidSqlParseTest.java需要使用版本-->
+                <!--<version>1.0.19</version>-->
                 <!--fescar官方引用版本-->
                 <!--<version>1.1.12</version>-->
                 <!--druid最高版本-->
                 <!--<version>1.1.14</version>-->
                 <!--fescar需要的最低版本-->
                 <version>1.1.3</version>
+
             </dependency>
 
 
