--- a/reusable-code/pom.xml
+++ b/reusable-code/pom.xml
@@ -123,7 +123,10 @@
             <artifactId>mockito-core</artifactId>
         </dependency>
 
-
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+        </dependency>
 
 
 
