--- a/interview-case/pom.xml
+++ b/interview-case/pom.xml
@@ -12,9 +12,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>interview-case</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0-SNAPSHOT</version>
 
     <dependencies>
+
+        <dependency>
+            <groupId>com.codefans</groupId>
+            <artifactId>basic-java</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
