--- a/pom.xml
+++ b/pom.xml
@@ -475,6 +475,24 @@
                 <version>3.2.12</version>
             </dependency>
 
+            <dependency>
+                <groupId>org.ow2.asm</groupId>
+                <artifactId>asm</artifactId>
+                <version>7.1</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.javassist</groupId>
+                <artifactId>javassist</artifactId>
+                <version>3.25.0-GA</version>
+            </dependency>
+
+            <dependency>
+                <groupId>com.le.jr</groupId>
+                <artifactId>jedis-ext</artifactId>
+                <version>3.0.4</version>
+            </dependency>
+
         </dependencies>
     </dependencyManagement>
 
