--- a/basic-java/pom.xml
+++ b/basic-java/pom.xml
@@ -66,6 +66,11 @@
             <artifactId>joda-time</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.caucho</groupId>
+            <artifactId>hessian</artifactId>
+        </dependency>
+
     </dependencies>
 
 
