--- a/pom.xml
+++ b/pom.xml
@@ -334,13 +334,6 @@
             </dependency>
 
             <dependency>
-                <groupId>mysql</groupId>
-                <artifactId>mysql-connector-java</artifactId>
-                <!--<version>5.1.46</version>-->
-                <version>${mysql-connector.version}</version>
-            </dependency>
-
-            <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter</artifactId>
                 <version>2.0.2.RELEASE</version>
@@ -488,10 +481,36 @@
             </dependency>
 
             <dependency>
+                <groupId>net.bytebuddy</groupId>
+                <artifactId>byte-buddy</artifactId>
+                <version>1.9.13</version>
+            </dependency>
+
+            <dependency>
                 <groupId>com.le.jr</groupId>
                 <artifactId>jedis-ext</artifactId>
                 <version>3.0.4</version>
             </dependency>
+
+            <dependency>
+                <groupId>com.caucho</groupId>
+                <artifactId>hessian</artifactId>
+                <version>4.0.62</version>
+            </dependency>
+
+            <!-- 序列化 -->
+            <dependency>
+                <groupId>de.ruedigermoeller</groupId>
+                <artifactId>fst</artifactId>
+                <version>2.57</version>
+            </dependency>
+            <dependency>
+                <groupId>com.esotericsoftware</groupId>
+                <artifactId>kryo</artifactId>
+                <version>4.0.2</version>
+            </dependency>
+
+
 
         </dependencies>
     </dependencyManagement>
@@ -518,9 +537,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.6.1</version>
                 <configuration>
-                    <source>1.6</source>
+                    <source>1.8</source>
                     <encoding>UTF8</encoding>
-                    <target>1.6</target>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
 
@@ -558,6 +577,24 @@
             <!--<url>https://repository.sonatype.org/content/groups/public/</url>-->
             <url>http://maven.aliyun.com/nexus/content/repositories/central/</url>
         </repository>
+
     </distributionManagement>
+
+
+    <!--<distributionManagement>-->
+        <!--<snapshotRepository>-->
+            <!--<id>snapshots</id>-->
+            <!--<name>snapshot</name>-->
+            <!--<url>http://10.75.228.31:8081/nexus/content/repositories/snapshots/</url>-->
+        <!--</snapshotRepository>-->
+        <!--<repository>-->
+            <!--<id>releases</id>-->
+            <!--<name>lebuild</name>-->
+            <!--<url>http://10.75.228.31:8081/nexus/content/repositories/releases/</url>-->
+        <!--</repository>-->
+    <!--</distributionManagement>-->
+
+
+
 
 </project>
