--- a/open-source/pom.xml
+++ b/open-source/pom.xml
@@ -119,6 +119,10 @@
             <groupId>org.apache.rocketmq</groupId>
             <artifactId>rocketmq-remoting</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.apache.rocketmq</groupId>
+            <artifactId>rocketmq-tools</artifactId>
+        </dependency>
 
         <!-- json open source -->
         <dependency>
