--- a/open-source/pom.xml
+++ b/open-source/pom.xml
@@ -19,6 +19,11 @@
     <dependencies>
 
         <dependency>
+            <groupId>com.codefans</groupId>
+            <artifactId>basic-java</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>commons-collections</groupId>
             <artifactId>commons-collections</artifactId>
         </dependency>
