--- a/pom.xml
+++ b/pom.xml
@@ -230,7 +230,9 @@
             <dependency>
                 <groupId>org.springframework.data</groupId>
                 <artifactId>spring-data-redis</artifactId>
-                <version>2.0.2.RELEASE</version>
+                <!-- 2.1.9与redis-2.9组合会报错-->
+                <!--<version>2.1.9.RELEASE</version>-->
+                <version>1.8.22.RELEASE</version>
             </dependency>
 
             <dependency>
@@ -405,12 +407,13 @@
             <dependency>
                 <groupId>org.apache.pdfbox</groupId>
                 <artifactId>pdfbox</artifactId>
-                <version>2.0.12</version>
+                <version>2.0.16</version>
             </dependency>
+
             <dependency>
                 <groupId>org.apache.pdfbox</groupId>
                 <artifactId>fontbox</artifactId>
-                <version>2.0.12</version>
+                <version>2.0.16</version>
             </dependency>
 
             <dependency>
