修改JedisClusterCommand.java源码，将集群当前连接的redis节点地址信息通过ThreadLocal存储到当前线程中

--- a/open-source/pom.xml
+++ b/open-source/pom.xml
@@ -22,7 +22,10 @@
             <groupId>com.codefans</groupId>
             <artifactId>basic-java</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>com.codefans</groupId>
+            <artifactId>reusable-code</artifactId>
+        </dependency>
         <dependency>
             <groupId>commons-collections</groupId>
             <artifactId>commons-collections</artifactId>
