logback、log4j、log4j2性能测试

--- a/open-source/src/main/resources/log4j/log4j2_v2_10_0.properties
+++ b/open-source/src/main/resources/log4j/log4j2_v2_10_0.properties
@@ -3,7 +3,7 @@ status = error
 dest = err
 name = PropertiesConfig
 
-property.filename = D:/Logs/opensource-rolling.log
+property.filename = D:/Logs/log4j2.log
 
 filter.threshold.type = ThresholdFilter
 filter.threshold.level = debug
@@ -31,7 +31,7 @@ appender.rolling.name = RollingFileName
 appender.rolling.append = true
 appender.rolling.fileName = ${filename}
 #appender.rolling.filePattern = D:/Logs/test1-%d{MM-dd-yy-HH-mm-ss}-%i.log
-appender.rolling.filePattern = D:/Logs/opensource-rolling-%d{yyyy-MM-dd}-%i.log
+appender.rolling.filePattern = D:/Logs/log4j2-%d{yyyy-MM-dd}-%i.log
 appender.rolling.layout.type = PatternLayout
 appender.rolling.layout.pattern = %d [%p] %C{1.}[%F:%L] [%t] - %m%n
 appender.rolling.policies.type = Policies
