--- a/open-source/src/main/resources/log4j/log4j_v1_2_9.properties
+++ b/open-source/src/main/resources/log4j/log4j_v1_2_9.properties
@@ -1,7 +1,7 @@
 log4j.rootCategory=, logFile, console
 
 log4j.appender.logFile=org.apache.log4j.RollingFileAppender
-log4j.appender.logFile.File=D:/tmp/logs/rolling_log_file.log
+log4j.appender.logFile.File=D:/Logs/log4j.log
 log4j.appender.logFile.layout=org.apache.log4j.PatternLayout
 log4j.appender.logFile.layout.ConversionPattern=[%-5p] %d(%r) --> [%t] %l: %m %x %n
 
