--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,11 @@
                 <artifactId>commons-codec</artifactId>
                 <version>1.10</version>
             </dependency>
+            <dependency>
+                <groupId>com.google.guava</groupId>
+                <artifactId>guava</artifactId>
+                <version>19.0</version>
+            </dependency>
 
             <dependency>
                 <groupId>junit</groupId>
