响应式编程RxJava入门

--- a/pom.xml
+++ b/pom.xml
@@ -524,6 +524,13 @@
             </dependency>
 
 
+            <dependency>
+                <groupId>io.reactivex.rxjava2</groupId>
+                <artifactId>rxjava</artifactId>
+                <version>2.2.10</version>
+            </dependency>
+
+
 
         </dependencies>
     </dependencyManagement>
