--- a/reusable-code/pom.xml
+++ b/reusable-code/pom.xml
@@ -139,7 +139,10 @@
             <groupId>org.javassist</groupId>
             <artifactId>javassist</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>io.reactivex.rxjava2</groupId>
+            <artifactId>rxjava</artifactId>
+        </dependency>
 
     </dependencies>
 
