--- a/open-source/pom.xml
+++ b/open-source/pom.xml
@@ -254,6 +254,12 @@
             <artifactId>kryo</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.fusesource</groupId>
+            <artifactId>sigar</artifactId>
+        </dependency>
+
+
     </dependencies>
 
 </project>
