--- a/open-source/pom.xml
+++ b/open-source/pom.xml
@@ -297,6 +297,11 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-dbcp2</artifactId>
         </dependency>
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+        </dependency>
+
 
         <dependency>
             <groupId>proxool</groupId>
