--- a/pom.xml
+++ b/pom.xml
@@ -131,10 +131,11 @@
                 <version>0.9.0</version>
             </dependency>
 
+            <!-- https://mvnrepository.com/artifact/com.lmax/disruptor -->
             <dependency>
                 <groupId>com.lmax</groupId>
                 <artifactId>disruptor</artifactId>
-                <version>3.3.7</version>
+                <version>3.4.2</version>
             </dependency>
 
             <!-- https://mvnrepository.com/artifact/dom4j/dom4j -->
@@ -619,6 +620,13 @@
                 <artifactId>commons-dbcp2</artifactId>
                 <version>2.7.0</version>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/commons-dbcp/commons-dbcp -->
+            <dependency>
+                <groupId>commons-dbcp</groupId>
+                <artifactId>commons-dbcp</artifactId>
+                <version>1.4</version>
+            </dependency>
+
 
             <!-- https://mvnrepository.com/artifact/proxool/proxool -->
             <dependency>
