--- a/pom.xml
+++ b/pom.xml
@@ -586,6 +586,18 @@
                 <version>2.0.2</version>
             </dependency>
 
+            <!-- https://mvnrepository.com/artifact/org.mybatis.generator/mybatis-generator-core -->
+            <dependency>
+                <groupId>org.mybatis.generator</groupId>
+                <artifactId>mybatis-generator-core</artifactId>
+                <version>1.3.2</version>
+            </dependency>
+            <dependency>
+                <groupId>com.le.jr</groupId>
+                <artifactId>mybatis-generator-ext</artifactId>
+                <version>1.0.3</version>
+            </dependency>
+
             <!-- https://mvnrepository.com/artifact/com.jolbox/bonecp -->
             <dependency>
                 <groupId>com.jolbox</groupId>
