1.打印e时不需要通配符{}，打印字符串时需要加 2.通过ognl访问对象属性值 3.pdf文件解密，生产不需要密码的新文件

--- a/open-source/pom.xml
+++ b/open-source/pom.xml
@@ -121,10 +121,10 @@
             <artifactId>jedis</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>com.le.jr</groupId>
-            <artifactId>jedis-ext</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>com.le.jr</groupId>-->
+<!--            <artifactId>jedis-ext</artifactId>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>com.lmax</groupId>
@@ -315,6 +315,11 @@
             <artifactId>proxool</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>ognl</groupId>
+            <artifactId>ognl</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -331,11 +336,11 @@
                         <artifactId>mysql-connector-java</artifactId>
                         <version>5.1.38</version>
                     </dependency>
-                    <dependency>
-                        <groupId>com.le.jr</groupId>
-                        <artifactId>mybatis-generator-ext</artifactId>
-                        <version>1.0.3</version>
-                    </dependency>
+<!--                    <dependency>-->
+<!--                        <groupId>com.le.jr</groupId>-->
+<!--                        <artifactId>mybatis-generator-ext</artifactId>-->
+<!--                        <version>1.0.3</version>-->
+<!--                    </dependency>-->
 
                 </dependencies>
                 <configuration>
