--- a/practice-task/pom.xml
+++ b/practice-task/pom.xml
@@ -117,6 +117,13 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+        </dependency>
+
+
+
     </dependencies>
 
 
