--- a/open-source/pom.xml
+++ b/open-source/pom.xml
@@ -320,6 +320,12 @@
             <artifactId>ognl</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
