--- a/basic-java/pom.xml
+++ b/basic-java/pom.xml
@@ -44,6 +44,10 @@
             <groupId>commons-beanutils</groupId>
             <artifactId>commons-beanutils</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-beans</artifactId>
+        </dependency>
 
         <dependency>
             <groupId>commons-lang</groupId>
