删除maven编译后留下的target目录

--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ allprojects {
 
     task delPomXml(type: Delete, group: "csz customize", description: "Copies sources to the dest directory") {
         delete "$projectDir/pom.xml"
+        delete "$projectDir/target/"
     }
 }
 
