jdk7和jdk8单独一个module

--- a/settings.gradle
+++ b/settings.gradle
@@ -8,3 +8,6 @@ include(':interview-case')
 include(':open-source')
 include(':practice-task')
 include(':reusable-code')
+include 'basic-java-jdk7'
+include 'basic-java-jdk8'
+
