--- a/basic-java-jdk8/build.gradle
+++ b/basic-java-jdk8/build.gradle
@@ -11,5 +11,6 @@ repositories {
 
 dependencies {
     compile 'com.alibaba:fastjson:1.2.47'
+    compile 'commons-collections:commons-collections:3.2.2'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
