--- a/reusable-code/pom.xml
+++ b/reusable-code/pom.xml
@@ -49,7 +49,7 @@
             <artifactId>xercesImpl</artifactId>
         </dependency>
         <dependency>
-            <groupId>batik</groupId>
+            <groupId>org.apache.xmlgraphics</groupId>
             <artifactId>batik-ext</artifactId>
         </dependency>
 
