--- a/pom.xml
+++ b/pom.xml
@@ -123,12 +123,6 @@
             </dependency>
 
             <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <version>4.12</version>
-            </dependency>
-
-            <dependency>
                 <groupId>io.jsonwebtoken</groupId>
                 <artifactId>jjwt</artifactId>
                 <version>0.9.0</version>
@@ -452,13 +446,13 @@
             <dependency>
                 <groupId>org.apache.pdfbox</groupId>
                 <artifactId>pdfbox</artifactId>
-                <version>2.0.16</version>
+                <version>2.0.18</version>
             </dependency>
 
             <dependency>
                 <groupId>org.apache.pdfbox</groupId>
                 <artifactId>fontbox</artifactId>
-                <version>2.0.16</version>
+                <version>2.0.18</version>
             </dependency>
 
             <dependency>
@@ -617,13 +611,6 @@
                 <version>3.3.1</version>
             </dependency>
 
-            <!-- https://mvnrepository.com/artifact/com.alibaba/druid -->
-            <dependency>
-                <groupId>com.alibaba</groupId>
-                <artifactId>druid</artifactId>
-                <version>1.1.19</version>
-            </dependency>
-
             <!-- https://mvnrepository.com/artifact/com.mchange/c3p0 -->
             <dependency>
                 <groupId>com.mchange</groupId>
@@ -660,16 +647,20 @@
             </dependency>
 
             <dependency>
-                <groupId>org.apache.pdfbox</groupId>
-                <artifactId>pdfbox</artifactId>
-                <version>2.0.18</version>
-            </dependency>
-
-            <dependency>
                 <groupId>ognl</groupId>
                 <artifactId>ognl</artifactId>
                 <version>3.2.12</version>
             </dependency>
+
+            <!-- https://mvnrepository.com/artifact/it.sauronsoftware/jave -->
+            <dependency>
+                <groupId>it.sauronsoftware</groupId>
+                <artifactId>jave</artifactId>
+                <version>1.0.2</version>
+                <scope>system</scope>
+                <systemPath>${project.basedir}/practice-task/lib/jave-1.0.2.jar</systemPath>
+            </dependency>
+
 
         </dependencies>
     </dependencyManagement>
