--- a/practice-task/pom.xml
+++ b/practice-task/pom.xml
@@ -122,6 +122,13 @@
             <artifactId>pdfbox</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>it.sauronsoftware</groupId>
+            <artifactId>jave</artifactId>
+            <version>1.0.2</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/lib/jave-1.0.2.jar</systemPath>
+        </dependency>
 
 
     </dependencies>
