excel处理的三种方式： UserModel EventModel Streaming

--- a/practice-task/pom.xml
+++ b/practice-task/pom.xml
@@ -130,6 +130,14 @@
             <systemPath>${project.basedir}/lib/jave-1.0.2.jar</systemPath>
         </dependency>
 
+        <dependency>
+            <groupId>xerces</groupId>
+            <artifactId>xercesImpl</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.xmlgraphics</groupId>
+            <artifactId>batik-ext</artifactId>
+        </dependency>
 
     </dependencies>
 
