build.gradle中忽略告警配置 配置java版本 java6特性修改

--- a/basic-java-jdk8/build.gradle
+++ b/basic-java-jdk8/build.gradle
@@ -5,6 +5,8 @@ plugins {
 group 'com.codefans'
 version '1.0.0-SNAPSHOT'
 
+sourceCompatibility = JavaVersion.VERSION_1_8
+
 repositories {
     mavenCentral()
 }
