--- a/basic-java-jdk7/build.gradle
+++ b/basic-java-jdk7/build.gradle
@@ -2,8 +2,14 @@ plugins {
     id 'java'
 }
 
+apply plugin: 'java'
+
 group 'com.codefans'
 version '1.0.0-SNAPSHOT'
+
+sourceCompatibility = JavaVersion.VERSION_1_7
+targetCompatibility = JavaVersion.VERSION_1_7
+
 
 repositories {
     mavenCentral()
