--- a/basic-java/build.gradle
+++ b/basic-java/build.gradle
@@ -7,6 +7,8 @@ apply plugin: 'java'
 compileJava.options.encoding = 'UTF-8'
 compileTestJava.options.encoding = 'UTF-8'
 
+sourceCompatibility = JavaVersion.VERSION_1_6
+targetCompatibility = JavaVersion.VERSION_1_6
 
 dependencies {
     implementation 'junit:junit:4.12'
