--- a/reusable-code/build.gradle
+++ b/reusable-code/build.gradle
@@ -13,10 +13,11 @@ dependencies {
     compile 'junit:junit:4.12'
     compile 'commons-lang:commons-lang:2.6'
     compile 'io.jsonwebtoken:jjwt:0.9.0'
+    compile 'com.fasterxml.jackson.core:jackson-core:2.9.4'
     compile 'com.fasterxml.jackson.core:jackson-databind:2.9.4'
     compile 'dom4j:dom4j:1.6.1'
     compile 'xerces:xercesImpl:2.11.0'
-    compile 'batik:batik-ext:1.7'
+    compile 'batik:batik-ext:1.6'
     compile 'org.apache.httpcomponents:httpclient:4.5.5'
     compile 'org.apache.httpcomponents:httpcore:4.4.9'
     compile 'commons-codec:commons-codec:1.10'
@@ -38,4 +39,5 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
 
     testImplementation 'org.mockito:mockito-core:3.2.4'
+    testCompile 'com.fasterxml.jackson.core:jackson-core:2.9.4'
 }
