--- a/basic-java/build.gradle
+++ b/basic-java/build.gradle
@@ -7,8 +7,8 @@ apply plugin: 'java'
 compileJava.options.encoding = 'UTF-8'
 compileTestJava.options.encoding = 'UTF-8'
 
-sourceCompatibility = JavaVersion.VERSION_1_6
-targetCompatibility = JavaVersion.VERSION_1_6
+sourceCompatibility = JavaVersion.VERSION_1_8
+targetCompatibility = JavaVersion.VERSION_1_8
 
 dependencies {
     implementation 'junit:junit:4.12'
@@ -17,7 +17,7 @@ dependencies {
     compile 'commons-beanutils:commons-beanutils:1.9.4'
     compile 'org.springframework:spring-beans:4.3.24.RELEASE'
     implementation 'commons-lang:commons-lang:2.6'
-    compile 'net.sf.json-lib:json-lib:2.4'
+    compile 'net.sf.json-lib:json-lib:2.4:jdk15'
     implementation 'com.alibaba:fastjson:1.2.47'
     implementation 'joda-time:joda-time:2.10'
     implementation 'com.caucho:hessian:4.0.62'
