两个链表的第一个公共节点-增加测试用例

--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ allprojects {
 
     repositories {
         maven {
-            url = uri('http://maven.aliyun.com/nexus/content/groups/public/')
+            url = uri('https://maven.aliyun.com/nexus/content/groups/public/')
         }
     }
 
