--- a/basic-java-jdk7/build.gradle
+++ b/basic-java-jdk7/build.gradle
@@ -1,6 +1,3 @@
-plugins {
-    id 'java'
-}
 
 apply plugin: 'java'
 
@@ -11,10 +8,7 @@ sourceCompatibility = JavaVersion.VERSION_1_7
 targetCompatibility = JavaVersion.VERSION_1_7
 
 
-repositories {
-    mavenCentral()
-}
-
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation 'junit:junit:4.12'
+//    testCompile 'junit:junit:4.12'
 }
