--- a/basic-java-jdk8/build.gradle
+++ b/basic-java-jdk8/build.gradle
@@ -1,18 +1,13 @@
-plugins {
-    id 'java'
-}
+
+apply plugin: 'java'
 
 group 'com.codefans'
 version '1.0.0-SNAPSHOT'
 
 sourceCompatibility = JavaVersion.VERSION_1_8
 
-repositories {
-    mavenCentral()
-}
-
 dependencies {
-    compile 'com.alibaba:fastjson:1.2.47'
-    compile 'commons-collections:commons-collections:3.2.2'
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation 'com.alibaba:fastjson:1.2.47'
+    implementation 'commons-collections:commons-collections:3.2.2'
+    implementation group: 'junit', name: 'junit', version: '4.12'
 }
