--- a/basic-java/build.gradle
+++ b/basic-java/build.gradle
@@ -14,10 +14,10 @@ dependencies {
     implementation 'junit:junit:4.12'
     implementation 'commons-io:commons-io:2.2'
     implementation 'commons-logging:commons-logging:1.2'
-    compile 'commons-beanutils:commons-beanutils:1.9.4'
-    compile 'org.springframework:spring-beans:4.3.24.RELEASE'
+    implementation 'commons-beanutils:commons-beanutils:1.9.4'
+    implementation 'org.springframework:spring-beans:4.3.24.RELEASE'
     implementation 'commons-lang:commons-lang:2.6'
-    compile 'net.sf.json-lib:json-lib:2.4:jdk15'
+    implementation 'net.sf.json-lib:json-lib:2.4:jdk15'
     implementation 'com.alibaba:fastjson:1.2.47'
     implementation 'joda-time:joda-time:2.10'
     implementation 'com.caucho:hessian:4.0.62'
