--- a/reusable-code/build.gradle
+++ b/reusable-code/build.gradle
@@ -7,27 +7,26 @@ apply plugin: 'java'
 compileJava.options.encoding = 'UTF-8'
 compileTestJava.options.encoding = 'UTF-8'
 
-
 dependencies {
-    compile project(':basic-java')
-    compile 'junit:junit:4.12'
-    compile 'commons-lang:commons-lang:2.6'
-    compile 'io.jsonwebtoken:jjwt:0.9.0'
-    compile 'com.fasterxml.jackson.core:jackson-core:2.9.4'
-    compile 'com.fasterxml.jackson.core:jackson-databind:2.9.4'
-    compile 'dom4j:dom4j:1.6.1'
-    compile 'xerces:xercesImpl:2.11.0'
-    compile 'batik:batik-ext:1.6'
-    compile 'org.apache.httpcomponents:httpclient:4.5.5'
-    compile 'org.apache.httpcomponents:httpcore:4.4.9'
-    compile 'commons-codec:commons-codec:1.10'
-    compile 'com.google.guava:guava:23.0'
-    compile 'commons-logging:commons-logging:1.2'
-    compile 'commons-io:commons-io:2.2'
-    compile 'mysql:mysql-connector-java:5.1.48'
-    compile 'com.alibaba:druid:1.1.3'
-    compile 'javax.mail:mail:1.4.7'
-    compile 'org.springframework:spring-beans:4.3.24.RELEASE'
+    implementation project(':basic-java')
+    implementation 'junit:junit:4.12'
+    implementation 'commons-lang:commons-lang:2.6'
+    implementation 'io.jsonwebtoken:jjwt:0.9.0'
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.9.4'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.4'
+    implementation 'dom4j:dom4j:1.6.1'
+    implementation 'xerces:xercesImpl:2.11.0'
+    implementation 'batik:batik-ext:1.6'
+    implementation 'org.apache.httpcomponents:httpclient:4.5.5'
+    implementation 'org.apache.httpcomponents:httpcore:4.4.9'
+    implementation 'commons-codec:commons-codec:1.10'
+    implementation 'com.google.guava:guava:23.0'
+    implementation 'commons-logging:commons-logging:1.2'
+    implementation 'commons-io:commons-io:2.2'
+    implementation 'mysql:mysql-connector-java:5.1.48'
+    implementation 'com.alibaba:druid:1.1.3'
+    implementation 'javax.mail:mail:1.4.7'
+    implementation 'org.springframework:spring-beans:4.3.24.RELEASE'
     api 'org.apache.poi:poi:3.17'
     api 'org.apache.poi:poi-ooxml:3.17'
     implementation 'org.apache.pdfbox:pdfbox:2.0.16'
@@ -37,7 +36,8 @@ dependencies {
     implementation 'cglib:cglib:3.2.12'
     implementation 'org.javassist:javassist:3.25.0-GA'
     implementation 'io.reactivex.rxjava2:rxjava:2.2.10'
+    implementation 'net.sf.json-lib:json-lib:2.4:jdk15'
 
     testImplementation 'org.mockito:mockito-core:3.2.4'
-    testCompile 'com.fasterxml.jackson.core:jackson-core:2.9.4'
+    testImplementation 'com.fasterxml.jackson.core:jackson-core:2.9.4'
 }
