设置全局依赖 新增CollectionUtils测试代码

--- a/build.gradle
+++ b/build.gradle
@@ -59,6 +59,11 @@ subprojects {
 
     }
 
+    dependencies {
+        compile 'org.projectlombok:lombok:1.18.12'
+        annotationProcessor 'org.projectlombok:lombok:1.18.12'
+    }
+
 }
 
 //buildscript {
