新增创建gradle项目功能

--- a/practice-task/src/main/java/com/codefans/practicetask/projectsetup/setup.properties
+++ b/practice-task/src/main/java/com/codefans/practicetask/projectsetup/setup.properties
@@ -1,7 +1,7 @@
 project.modelVersion=4.0.0
-project.name=spring-project
-project.groupId=com.mpif
-project.artifactId=spring-project
+project.name=graphql-project
+project.groupId=com.codefans
+project.artifactId=graphql-project
 project.version=1.0.0-SNAPSHOT
 project.packaging=pom
 
@@ -32,12 +32,9 @@ project.profiles.product.property.name=product
 
 project.maven.deploy.skip=true
 
-module.artifactIds=spring-mvc;spring-aop;spring-ioc;
-module.spring-mvc.packaging=jar
-module.spring-mvc.maven.deploy.skip=true
+module.artifactIds=graphql-springmvc;graphql-springboot;
+module.graphql-springmvc.packaging=war
+module.graphql-springmvc.maven.deploy.skip=true
 
-module.spring-aop.packaging=jar
-module.spring-aop.maven.deploy.skip=true
-
-module.spring-ioc.packaging=jar
-module.spring-ioc.maven.deploy.skip=true
+module.graphql-springboot.packaging=war
+module.graphql-springboot.maven.deploy.skip=true
