--- a/practice-task/build.gradle
+++ b/practice-task/build.gradle
@@ -24,3 +24,9 @@ dependencies {
     api 'org.apache.pdfbox:pdfbox:2.0.16'
     implementation fileTree(dir:'lib',includes:['jave-1.0.2.jar'])
 }
+
+sourceSets {
+    main {
+        resources.srcDirs = ['src/main/resources', 'src/main/java']
+    }
+}
