No53MaximumSubarray.java最大子序列和 No121BestTimeToBuyAndSellStock.java买卖股票的最佳时机

--- a/interview-case/build.gradle
+++ b/interview-case/build.gradle
@@ -18,3 +18,10 @@ dependencies {
     testImplementation 'org.hamcrest:hamcrest-core:2.2'
 
 }
+
+
+sourceSets {
+    main {
+        resources.srcDirs = ['src/main/resources', 'src/main/java']
+    }
+}
