封装线程池ExecutorService 新增lombok支持

--- a/basic-java-jdk8/build.gradle
+++ b/basic-java-jdk8/build.gradle
@@ -4,9 +4,8 @@ apply plugin: 'java'
 group 'com.codefans'
 version '1.0.0-SNAPSHOT'
 
-sourceCompatibility = JavaVersion.VERSION_1_8
-
 dependencies {
+    implementation project(':reusable-code')
     implementation 'com.alibaba:fastjson:1.2.47'
     implementation 'commons-collections:commons-collections:3.2.2'
     implementation group: 'junit', name: 'junit', version: '4.12'
