--- a/open-source/build.gradle
+++ b/open-source/build.gradle
@@ -3,6 +3,7 @@
  */
 
 apply plugin: 'java'
+apply plugin: 'java-library'
 
 compileJava.options.encoding = 'UTF-8'
 compileTestJava.options.encoding = 'UTF-8'
@@ -12,8 +13,9 @@ targetCompatibility = JavaVersion.VERSION_1_8
 
 dependencies {
     implementation project(':basic-java')
-    implementation project(':reusable-code')
     implementation 'commons-collections:commons-collections:3.2.2'
+//    implementation 'commons-collections:commons-collections:3.2.2'
+    api 'org.apache.commons:commons-collections4:4.4'
     implementation 'commons-lang:commons-lang:2.6'
     implementation 'junit:junit:4.12'
     implementation 'org.apache.kafka:kafka-clients:1.0.0'
@@ -72,5 +74,8 @@ dependencies {
     implementation 'commons-dbcp:commons-dbcp:1.4'
     implementation 'proxool:proxool:0.8.3'
     implementation 'ognl:ognl:3.2.12'
+    implementation 'com.google.guava:guava:31.1-jre'
+    api 'org.apache.poi:poi:3.17'
+    api 'org.apache.poi:poi-ooxml:3.17'
     testImplementation 'org.mockito:mockito-core:3.2.4'
 }
