--- a/reusable-code/build.gradle
+++ b/reusable-code/build.gradle
@@ -3,12 +3,14 @@
  */
 
 apply plugin: 'java'
+apply plugin: 'java-library'
 
 compileJava.options.encoding = 'UTF-8'
 compileTestJava.options.encoding = 'UTF-8'
 
 dependencies {
     implementation project(':basic-java')
+    api project(':open-source')
     implementation 'junit:junit:4.12'
     implementation 'commons-lang:commons-lang:2.6'
     implementation 'io.jsonwebtoken:jjwt:0.9.0'
@@ -27,8 +29,7 @@ dependencies {
     implementation 'com.alibaba:druid:1.1.3'
     implementation 'javax.mail:mail:1.4.7'
     implementation 'org.springframework:spring-beans:4.3.24.RELEASE'
-    api 'org.apache.poi:poi:3.17'
-    api 'org.apache.poi:poi-ooxml:3.17'
+
     implementation 'org.apache.pdfbox:pdfbox:2.0.16'
     implementation 'org.apache.pdfbox:fontbox:2.0.16'
     implementation 'redis.clients:jedis:2.9.0'
